# ParProg

./: README.md
lab1/: CMakeLists.txt  README.md  main.cpp
lab3/: CMakeLists.txt  README.md  benchmark_mpi.py  generate_matrix.py  main_mpi.cpp
lab4/: CMakeLists.txt  README.md  benchmark_cuda.py  generate_matrix.py  main_cuda.cu  verify_cuda.py
lab5/: README.md  matrix_mult_mpi  startMPI.pbs  verify.py
laba2/: CMakeLists.txt  README.md  benchmark.py  generate_matrix.py  main_omp.cpp
